# excelfiller

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  LICENSE  README.md  conan_debug_profile  conanfile.txt
.github/workflows/: codeql.yml
Source/ExcelFiller/: CMakeLists.txt  ExcelFillerConfig.cmake.in
Source/ExcelFiller/include/ExcelFiller/: SharedStringTable.h  SheetData.h  SheetRelation.h  concepts.hpp  hashmap.hpp  utils.h  workbook.h  xlsxWorkbook.h  xlsxWorksheet.h  zipxmlhelper.h
Source/ExcelFiller/src/: SharedStringTable.cpp  SheetData.cpp  SheetRelation.cpp  SheetRelations.cpp  SheetRelations.h  workbook.cpp  xlsxWorkbook.cpp  xlsxWorksheet.cpp  zipxmlhelper.cpp
Source/zip/: CMakeLists.txt
Source/zip/include/zip/: zip.h
Source/zip/src/: miniz.h  zip.c
cmake/: Conan.cmake  ZipCpp.cmake  lint-targets.cmake  lint.cmake
examples/: CMakeLists.txt  example.cpp  example.xlsx  get_file_path.hpp.in
examples/EBAbenchmark/: CMakeLists.txt  convert_xlsb.bat.in  eba_benchmark.cpp  extract_target_cells.py  target_cells.json
